# UCG

./: .bazelrc  .gitignore  .gitmodules  BUILD.bazel  Dependencies.lua  premake5.lua  setup.bat
assets/Buildings/: Forest.aseprite
assets/Cards/Decorators/: Mana Badge.aseprite
assets/Cards/Splash Art/: Goblin.aseprite  Meteor.aseprite  Sanctuary.aseprite  Slime.aseprite  Smite.aseprite  Tornado.aseprite
assets/Monsters/: Goblin.aseprite  Slime.aseprite
assets/Templates/: Card.aseprite  Profile.aseprite  Splash Art.aseprite  Tile.aseprite  VFX.aseprite
assets/Tiles/: Dirt.aseprite  Forest.aseprite  Mountain.aseprite  Opponent.aseprite  Player.aseprite  Water.aseprite
assets/UI/Battle/: Health Vessel.aseprite  Heart.aseprite  Mana Vessel.aseprite  Mana.aseprite
assets/UI/Profiles/: ForestProfile.aseprite
assets/VFX/: Meteor.aseprite  Sanctuary.aseprite  Smite.aseprite
configs/: client.uconf  server.uconf
engine/: BUILD.bazel
notes/: map_tile_char_key.txt
scripts/: build.bat  build.sh  run.bat  run.sh  setup.bat  setup.sh
src/: Game.cpp  GameLayer.cpp  GameLayer.h  main.cpp
src/Buildings/: Building.cpp  Building.h  BuildingCore.h  Forest.cpp  Forest.h  Mountain.cpp  Mountain.h  Nexus.cpp  Nexus.h
src/Core/: CardDictionary.cpp  CardDictionary.h  Player.cpp  Player.h  Structures.h
src/Monsters/: Behaviors.cpp  Behaviors.h  Goblin.cpp  Goblin.h  Monster.cpp  Monster.h  MonsterCore.h  Slime.cpp  Slime.h
src/Scenes/: BattleScene.cpp  BattleScene.h  GameScene.cpp  GameScene.h
src/Utils/: BoardUtils.cpp  BoardUtils.h  FileUtils.cpp  FileUtils.h  LayerUtils.cpp  LayerUtils.h  RandomUtils.cpp  RandomUtils.h  SceneUtils.cpp  SceneUtils.h
src/VFX/: LightningCloud.cpp  LightningCloud.h  Meteor.cpp  Meteor.h  Sanctuary.cpp  Sanctuary.h  VFX.cpp  VFX.h  VFXCore.h
