cc_binary(
    name = "UCG",
    srcs = glob(["src/*.cpp", "src/**/*.cpp", "src/*.h", "src/**/*.h"]),
    copts = ["-DBAZEL_BUILD"],
    deps = [
        "//engine:ucg_Flora",
    ],
)

cc_binary(
    name = "UCG_prime",
    srcs = glob(["src/*.cpp", "src/**/*.cpp", "src/*.h", "src/**/*.h"]),
    deps = [
        "//engine:ucg_Flora",
    ],
)